# badger

./: .gitignore  COPYING  README.md  TODO
arthuino/: Arthuino.pro  Arthuino.ui  FenPrincipale.cpp  FenPrincipale.h  FenPrincipale.hpp  ReadSerialThread.cpp  ReadSerialThread.h  ReadSerialThread.hpp  main.cpp
badger/: CMakeLists.txt  FindMySQL.cmake  Makefile
badger/include/: Badger.hpp  Badger.inl  ConsoleViewBadger.hpp  Database.hpp  Date.hpp  Time.hpp
badger/src/: Badger.cpp  ConsoleViewBadger.cpp  Database.cpp  Date.cpp  Time.cpp  main.cpp
console/: Console.cpp  Console.hpp  Console.inl  ConsoleFunction.hpp  ConsoleFunction.inl  ConsoleFunctionBase.cpp  ConsoleFunctionBase.hpp  ConsoleView.cpp  ConsoleView.hpp  ConsoleViewStdOut.cpp  ConsoleViewStdOut.hpp  StringExtractor.cpp  StringExtractor.hpp  StringExtractor.inl
serial/include/: Platform.hpp  SerialStream.hpp
serial/src/: SerialStream.cpp  SerialStreamImpl.cpp  SerialStreamImpl.hpp
serial/src/Linux/: SerialStreamImplLinux.cpp  SerialStreamImplLinux.hpp
serial/src/Posix/: SerialStreamImplPosix.cpp  SerialStreamImplPosix.hpp
serial/src/Win32/: SerialStreamImplWin32.cpp  SerialStreamImplWin32.hpp
www/: index.html
